# subbit-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix  rust-toolchain.toml  treefmt.toml
