[workspace]
members = [ "packages/core" ]
resolver = "2"

[workspace.package]
description = "Subbit stack in rust"
documentation = "https://github.com/kompact-io/subbit-rs"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/kompact-io/subbit-rs"
homepage = "https://github.com/kompact-io/subbit-rs"
license = "MPL-2.0"
authors = [
]
rust-version = "1.95.0"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
cardano-sdk = { git = "https://github.com/cardano-lightning/konduit.git", branch="main" }
