[workspace]
members = [
  "packages/core",
  "packages/core-conformance",
  "packages/tx",
  "packages/index",
  "packages/cli",
]
resolver = "2"

[workspace.package]
description = "Subbit stack in rust"
documentation = "https://github.com/kompact-io/subbit-rs"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/kompact-io/subbit-rs"
homepage = "https://github.com/kompact-io/subbit-rs"
license = "MPL-2.0"
authors = ["@waalge"]
rust-version = "1.95.0"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.dependencies]
amaru-uplc = "0.3.0"
anyhow = "1.0.102"
cardano-connector = { git = "https://github.com/cardano-lightning/konduit", branch = "bump-deps" }
cardano-connector-direct = { git = "https://github.com/cardano-lightning/konduit", branch = "bump-deps" }
cardano-sdk = { git = "https://github.com/cardano-lightning/konduit.git", branch = "bump-deps" }
clap = { version = "4.6.1", features = ["env", "derive"] }
hex = { version = "0.4", default-features = false }
minicbor = { version = "2.2.2", default-features = false }
proptest = "1"
proptest-derive = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["full"] }

subbit-core = { path = "packages/core" }
